--- a/docs/manuscript/lexces-silicosis-predict.bib
+++ b/docs/manuscript/lexces-silicosis-predict.bib
@@ -71,7 +71,6 @@ year = {2017}
 abstract = {Objectives: To evaluate the prevalence of HRCT findings in construction workers previously surveyed by chest radiographs classified according to ILO guidelines. To examine the association between HRCT findings and exposure to quartz containing dust, and lung function. Methods: The study comprised a questionnaire, dynamic and static lung function measurements, single-breath CO diffusion capacity, chest radiographs and HRCT in 79 individuals. Certified 'B' readers coded radiographs according to the ILO classification. HRCT scans were read according to an international classification system. A qualitative exposure index for cumulative respiratory quartz on a 10-point scale was used. Results: Agreement between HRCT readers was good ($\kappa${\textgreater}0.60), except for irregular opacities ($\kappa$=0.23). In ILO category 0/0, 8{\%} HRCT round, 22{\%} irregular and/or linear opacities and 41{\%} HRCT emphysema was found. HRCT round opacities was associated with high cumulative quartz exposure (OR 7.1; 95{\%} CI 1.3 to 37.8). Emphysema was associated with smoking (OR 10.1; 95{\%} CI 1.2 to 84.2) and showed a reduction in TL,CO,sb. HRCT round opacities was not associated with lung function. Current smoking was negatively associated with FEV1/FVC ratio and positively with RV/TLC ratio, and showed a reduction in TL,CO,sb (13.4{\%}), adjusted for different HRCT findings. Conclusions: Low grade silicosis cannot be excluded in workers with normal chest radiographs (ILO 0/0). In relatively highly exposed construction workers, a sevenfold increased risk of simple (nodular) silicosis was found. Emphysema on HRCT was associated with current or former smokers, but not with exposure, and contributed to reduced diffusion capacity. Airflow limitation was mainly determined by current smoking and was not associated with simple (nodular) silicosis.},
 author = {Meijer, E. and {Tjoe Nij}, E. and Kraus, T. and van der Zee, J S and van Delden, O and van Leeuwen, M and Lammers, J. W. and Heederik, D.},
 doi = {10.1136/oem.2010.055616},
-file = {:E$\backslash$:/OneDrive - Universiteit Utrecht/Lexces/Papers/Prediction models/Lung diseases/542.full.pdf:pdf},
 issn = {1351-0711},
 journal = {Occupational and Environmental Medicine},
 mendeley-groups = {Lexces/Silicosis},
@@ -84,4 +83,74 @@ url = {https://oem.bmj.com/lookup/doi/10.1136/oem.2010.055616},
 volume = {68},
 year = {2011}
 }
-
+@article{Collins2024,
+author = {Collins, Gary S. and Moons, Karel G M and Dhiman, Paula and Riley, Richard D. and Beam, Andrew L. and {Van Calster}, Ben and Ghassemi, Marzyeh and Liu, Xiaoxuan and Reitsma, Johannes B. and van Smeden, Maarten and Boulesteix, Anne-Laure and Camaradou, Jennifer Catherine and Celi, Leo Anthony and Denaxas, Spiros and Denniston, Alastair K. and Glocker, Ben and Golub, Robert M. and Harvey, Hugh and Heinze, Georg and Hoffman, Michael M. and Kengne, Andr{\'{e}} Pascal and Lam, Emily and Lee, Naomi and Loder, Elizabeth W. and Maier-Hein, Lena and Mateen, Bilal A. and McCradden, Melissa D. and Oakden-Rayner, Lauren and Ordish, Johan and Parnell, Richard and Rose, Sherri and Singh, Karandeep and Wynants, Laure and Logullo, Patricia},
+doi = {10.1136/bmj-2023-078378},
+issn = {1756-1833},
+journal = {BMJ},
+mendeley-groups = {EQUATOR},
+month = {apr},
+pages = {e078378},
+pmid = {38626948},
+title = {{TRIPOD+AI statement: updated guidance for reporting clinical prediction models that use regression or machine learning methods}},
+url = {https://www.bmj.com/lookup/doi/10.1136/bmj-2023-078378},
+volume = {385},
+year = {2024}
+}
+@article{Nicol2015,
+abstract = {Background: Silicosis is one of the oldest occupational lung diseases, but it continues to cause significant morbidity and mortality worldwide. Aims: To report cases of silicosis presenting to two specialist respiratory clinics. Methods: A retrospective analysis of prospectively collected data of cases of silicosis in workers referred to specialist respiratory clinics. Results: Over the course of 6 years, six cases were identified. The patients were all male with an age range between 24 and 39 years. The duration of silica exposure ranged between 7 and 20 years (mean 13 years). Four cases were entirely asymptomatic at presentation, and two cases described minimal shortness of breath on exertion. Pulmonary function tests were normal in three cases, and a mild restrictive ventilatory defect was documented in the other cases. All had a low apparent predicted probability of pneumoconiosis based on health questionnaires, spirometry and duration of silica exposure. The initial chest X-ray was abnormal in all six cases with radiological evidence of silicosis (International Labour Office profusion category =1/1) on imaging, and all had evidence of silicosis on high-resolution computed tomography (HRCT). Three patients had already progressed to progressive massive fibrosis on HRCT scanning at the time of referral to specialist respiratory services. Conclusions: The appearances of these six cases of silicosis in young, asymptomatic construction workers emphasizes the importance of enforcing effective exposure control and comprehensive surveillance programmes. Our observations highlight the importance of having a low threshold for early radiological screening to promote early and effective detection of this disease.},
+author = {Nicol, L. M. and McFarlane, P. A. and Hirani, N. and Reid, P. T.},
+doi = {10.1093/occmed/kqu209},
+issn = {1471-8405},
+journal = {Occupational Medicine},
+keywords = {Health surveillance,Occupational health care delivery,Occupational respiratory disease,Pneumoconioses,Silicosis},
+mendeley-groups = {Lexces/Silicosis/Diagnostic Rule/External validation},
+month = {apr},
+number = {3},
+pages = {220--225},
+pmid = {25744972},
+title = {{Six cases of silicosis: implications for health surveillance of stonemasons}},
+url = {https://academic.oup.com/occmed/article/65/3/220/1480668},
+volume = {65},
+year = {2015}
+}
+@article{Mets2012,
+abstract = {OBJECTIVE: To determine the prevalence of increased micronodule counts in silica dust-exposed smokers. METHODS: We evaluated 54 male smokers with severe silica dust exposure and 54 male control smokers. Both groups underwent low-dose chest computed tomography and lung function testing. Computed tomographic scans were visually evaluated for solid micronodules ({\textless}3 mm). The 95th percentile of micronodule count was calculated for the control smokers. Prevalence of an increased micronodule count was assessed for the dust-exposed subjects. RESULTS: Solid micronodules were present in most participants of both groups. The 95th percentile of micronodule count in the control group was 13. Increased micronodule counts were significantly more common in the exposed group than in the control group (P = 0.01). CONCLUSIONS: A substantial number of silica-exposed heavy smokers evaluated for silicosis have increased micronodule counts on chest computed tomographic scan. This finding might represent an early stage of silicosis.},
+author = {Mets, Onno M. and Rooyackers, Jos and {van Amelsvoort-van de Vorst}, Saskia and Mali, Willem Pthm and de Jong, Pim A. and Prokop, Mathias},
+doi = {10.1097/JOM.0b013e31824e6784},
+issn = {10762752},
+journal = {Journal of Occupational and Environmental Medicine},
+mendeley-groups = {Lexces/Silicosis,Lexces/Silicosis/Diagnostic Rule/External validation},
+number = {00},
+pages = {1--5},
+title = {{Increased micronodule counts are more common in occupationally silica dust-exposed smokers than in control smokers}},
+volume = {00},
+year = {2012}
+}
+@article{Stigter2011,
+abstract = {Objective: Dust containing crystalline silica may cause silicosis, COPD and lung cancer even at low exposure levels. Since no therapy for silicosis is available, early detection is needed to avoid further exposure and progression of the disease. In the Netherlands a national surveillance programme including medical triage has been implemented to identify construction workers with silicosis. For that purpose a diagnostic model has been developed to predict the probability of silicosis by use of a short questionnaire and lung function [1]. In this study medical triage was applied in a ceramic tile production plant.Methods: The diagnostic model was tailored to the company using historical exposure data. Of a total of 391 workers 353 (90{\%}) participated in the study, 52 of whom (15{\%}) had a high risk (sumscore ≥ 5) and were candidate for medical evaluation, including a low-dose high resolution CT-scan of the lungs.Results: 48 of 52 workers (response 92{\%}) were referred for clinical evaluation. Mean age was 52 (±5) yrs, number of pack years 28 (±21). Silicosis was found in 8 workers (17{\%}), another 3 had an increased number of micronodules on CT (6{\%}). In addition, COPD was present in 6 workers (13{\%}): Gold I in 2 (one of whom had silicosis), Gold II in 3 and Gold III in 1 worker.Conclusion: Medical triage followed by specific clinical evaluation in a population of tile plant workers was effective in the early detection of silicosis and yielded a high percentage of COPD. The results stress the need for exposure measures in the tile production industry.References:1. Suarthana E et al. A simple diagnostic model for ruling out pneumoconiosis among construction workers. Occup Environ Med 2007;64:595-601.},
+author = {Stigter, Erik and Rooyackers, Jos and Houba, Remko and Heederik, Dick},
+journal = {European Respiratory Journal},
+mendeley-groups = {Lexces/Silicosis/Diagnostic Rule/External validation},
+month = {sep},
+number = {Suppl 55},
+pages = {p4934},
+title = {{Medical triage for early detection of silicosis in a ceramic tile production plant}},
+url = {http://erj.ersjournals.com/content/38/Suppl{\_}55/p4934.abstract},
+volume = {38},
+year = {2011}
+}
+@article{Rooijackers2016,
+abstract = {Introduction: Construction workers exposed to crystalline silica are at risk for developing silicosis, lung cancer and COPD. Since no therapy for silicosis is available, early detection is needed to avoid further progression of the disease by reducing exposure. In collaboration with the Dutch employers and employees organisation for occupational health and safety in the construction industry (Arbouw) a health surveillance programme was implemented.Objective: to identify silicosis in silica exposed construction workers.Methods: a diagnostic model predicting the probability of silicosis was used as a medical triage system based on risk stratification1. Construction workers with a high risk (sumscore ≥ 5) were invited for medical evaluation, including a low-dose high resolution CT-scan of the lungs (HRCT) and spirometry. HRCT was used as the reference standard for silicosis.Results: Of {\&}gt; 75.000 construction workers 1123 (1,5{\%}) were at high risk according to the prediction rule, of whom 295 (response 26{\%}) underwent a clinical investigation. Mean age was 50 (± 6) yrs, number of pack years 26 (± 16). FEV1 was 96 (±16) {\%}pred., FEV1/VC 72 (± 6){\%}. Silicosis was found in 64 workers (22{\%}), 37 (13{\%}) of which in an early stage, corresponding well with the model. HRCT showed numerous other abnormalities including different interstitial patterns, pleural thickening, emphysema and coronary artery calcifications. COPD was present in 62 (21{\%}) workers.Conclusion: silicosis seems still common among silica exposed construction workers, together with co-existing comorbidities.References1. Suarthana E, Moons KG, Heederik D, Meijer E. A simple diagnostic model for ruling out pneumoconiosis among construction workers. Occup Environ Med. 2007; 64:595-601.},
+author = {Rooijackers, Jos M and Stigter, Erik and Niederer, Mischa and de Jong, Pim A and Aalders, Bernadette and van Geutselaar, Ans and Heederik, Dick},
+doi = {10.1183/13993003.congress-2016.OA458},
+journal = {European Respiratory Journal},
+mendeley-groups = {Lexces/Silicosis/Diagnostic Rule/External validation},
+month = {sep},
+number = {suppl 60},
+pages = {OA458},
+title = {{Silicosis in Dutch construction workers}},
+url = {http://erj.ersjournals.com/content/48/suppl{\_}60/OA458.abstract},
+volume = {48},
+year = {2016}
+}
